tests/ui/snapshots/unclosed_paren.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0111]: unclosed `(` — expected `)`, found `}`
 --> unclosed_paren.ply:3:1
  |
 3| }
  | ^
 --> unclosed_paren.ply:2:8
  |
 2|     add(a, 1
  |        - `(` opened here
help: close the `(` here
 3| )}

1 error
