tests/ui/snapshots/unexpected_character.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0102]: unexpected character `$`
 --> unexpected_character.ply:2:7
  |
 2|     a $ 2
  |       ^

1 error
