tests/ui/snapshots/unknown_capability.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0119",
    "severity": "error",
    "phase": "parse",
    "title": "unknown capability `net.connect`; Ply v0 has io.read, io.write, db.read, db.write, rand, time",
    "primary_span": {
      "file": "unknown_capability.ply",
      "start": [
        2,
        12
      ],
      "end": [
        2,
        23
      ]
    },
    "fixes": [],
    "worklist_ref": null
  }
]
