tests/ui/snapshots/unknown_capability.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0119]: unknown capability `net.connect`; Ply v0 has io.read, io.write, db.read, db.write, rand, time
 --> unknown_capability.ply:2:12
  |
 2|     uses { net.connect }
  |            ^^^^^^^^^^^

1 error
