tests/ui/snapshots/unknown_verify_mode.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0118",
    "severity": "error",
    "phase": "parse",
    "title": "unknown verification mode `wobble`; the dial is test, fuzz, bounded, induct, prove",
    "primary_span": {
      "file": "unknown_verify_mode.ply",
      "start": [
        2,
        12
      ],
      "end": [
        2,
        18
      ]
    },
    "fixes": [],
    "worklist_ref": null
  }
]
