tests/ui/snapshots/unknown_verify_mode.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0118]: unknown verification mode `wobble`; the dial is test, fuzz, bounded, induct, prove
 --> unknown_verify_mode.ply:2:12
  |
 2|     verify wobble
  |            ^^^^^^

1 error
