tests/ui/snapshots/unterminated_string.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0103]: unterminated string literal
 --> unterminated_string.ply:2:5
  |
 2|     "hello
  |     ^^^^^^
help: close the string
 2|     "hello"

1 error
